@@ -1,4 +1,8 @@
 05-Jun-2015 Laurent Duflot
+	* PhysObjProxyUtils + CR: change energies to GeV in the *mini-tuple*
+	(the rest of the code still use MeV !)
+
+05-Jun-2015 Laurent Duflot
 	* ZeroLeptonNTVars, PhysObjProxyUtils: add tau pT, eta, phi
 	* PhysObjProxies, BuildSUSYObjects: add isBad to muons
 	* SR+CR : remove cleaning cuts and fill 'cleaning' variable with decision
